--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/node": "^20",
