--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.24.1",
     "sass": "^1.77.6",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
